--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "normalize.scss": "^0.1.0",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-cli": "^2.9.6",
+    "vue-reactive-storage": "git+https://github.com/ropbla9/vue-reactive-storage.git",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
